force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration_Settings__c/nMONITOR__Informatica_Cloud_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting holding Informatica Cloud authentication details and sub-org Id.</description>
    <label>-D Informatica Cloud Integration Setting</label>
</CustomObject>