force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration_Settings__c/fields/nMONITOR__Informatica_Cloud_Password__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Informatica_Cloud_Password__c</fullName>
    <description>Password of read-only Informatica Cloud user.</description>
    <inlineHelpText>Password of read-only Informatica Cloud user.</inlineHelpText>
    <label>Informatica Cloud Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>