force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration_Settings__c/fields/nMONITOR__Informatica_Cloud_Username__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Informatica_Cloud_Username__c</fullName>
    <description>Username of read-only Informatica user.</description>
    <inlineHelpText>Username of read-only Informatica user.</inlineHelpText>
    <label>Informatica Cloud Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>