force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration_Settings__c/fields/nMONITOR__Informatica_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Informatica_Org_Id__c</fullName>
    <description>Id of customer Informatica sub-org.</description>
    <inlineHelpText>Id of customer Informatica sub-org.</inlineHelpText>
    <label>Informatica Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>